# splust

./: Cargo.toml
application/: Cargo.toml
application/src/: main.rs
implementation/: Cargo.toml
implementation/src/: lib.rs
interface/: Cargo.toml
interface/src/: lib.rs
splat-cli/: Cargo.toml
splat-cli/src/: main.rs
splat-cli/src/scripts/: split.rs
splat-core/: Cargo.toml
splat-core/src/: lib.rs  yaml.rs
splat-core/src/config/: instance.rs  mod.rs  options.rs
splat-core/src/sections/before_proc/common/: asm.rs  data.rs  mod.rs
splat-core/src/sections/processed/common/: asm_processed.rs  data_processed.rs  mod.rs
splat-core/src/segtypes/: mod.rs
splat-core/src/segtypes/before_proc/common/: asm.rs  mod.rs
splat-core/src/segtypes/processed/common/: asm_processed.rs  mod.rs
splat-core/test_data/: splat.yaml
splat-segment/: Cargo.toml
splat-segment-api/: Cargo.toml
splat-segment-api/src/: bindings.rs  lib.rs  section_trait.rs  segment_trait.rs
splat-segment-api/wit/: world.wit
splat-segment/src/: lib.rs
