[package]
name = "splat-core"
version = "0.50.0"
edition = "2024"
license = "MIT"

[dependencies]
# crunch64 = "0.6"
# gfxd-rs = "0.1"
# pigment64 = "0.6"
# spimdisasm = { git = "https://github.com/Decompollaborate/spimdisasm.git", branch = "rs" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
wasmtime = { version = "35.0", features = ["component-model", "cranelift", "std", "runtime" ] }
wasmtime-wasi = "35.0"
